--- a/views/motest.ejs
+++ b/views/motest.ejs
@@ -92,6 +92,9 @@
 	</header>
 
 	<div class="container" id="body" style="color: white; margin-top: 75px; margin-bottom: 25px;">
+		<br>
+		<h3><u>Logical Reasoning</u></h3>
+		<br>
             <div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 1</h4><br>
                 Starting from noon, what is the angle swept by the hour hand of a clock when 
@@ -130,10 +133,10 @@
 				(with respect to correct time frame). What is the time shown in the clock on
 				the third day when actual time is 7:30 p.m.?<br>
 				<br>
-				A. 8:42 p.m. <br>
-				B. 8:40 p.m. <br>
-				C. 8:38 p.m. <br>
-				D. 8:36 p.m <br>
+				A. 8:52 p.m. <br>
+				B. 8:50 p.m. <br>
+				C. 8:48 p.m. <br>
+				D. 8:46 p.m <br>
 			
 			
 			</div>
@@ -252,144 +255,48 @@ response of 12 P 6 M 15 T 16 B 4?
 			</div>
 
 
-			<h3><u>Mathematical Reasoning</u></h3>
+			<h3><u>Aptitude</u></h3>
 
 			<br>
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 11</h4><br>
-                Krishna has exams for 12 subjects. Overall, to succeed he must pass in a
-greater number of subjects than the subjects he fails. In how many ways can
-he fail?
-				<br>
-				<br>
-				A. 1586 <br>
-				B. 1585 <br>
-				C. 2509 <br>
-				D. 2510 <br>
+                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
+spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
+filled from these vessels to contain a mixture of spirit and water in the ratio of
+4:1. How many liters are taken from the first vessel?
 
+				<br>
+				<br>
+				A. 11 litres  <br>
+				B. 22 litres  <br>
+				C. 16.5 litres <br>
+				D. 17.5 litres <br>
+				
 			</div>
 
 			<br><br>
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 12</h4><br>
-                The locus of middle points of a system of parallel chords of a parabola y^2 =
-4ax, if m is the slope of parallel chords is,
+                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
+spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
+filled from these vessels to contain a mixture of spirit and water in the ratio of
+4:1. How many liters are taken from the first vessel?
 
 				<br>
 				<br>
-				A. y = m/2a <br>
-				B. y = 2m/a <br>
-				C. y = a/2m <br>
-				D. y = 2a/m <br>
-
+				A. 11 litres  <br>
+				B. 22 litres  <br>
+				C. 16.5 litres <br>
+				D. 17.5 litres <br>
+				
 			</div>
 
 			<br><br>
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 13</h4><br>
-                .The coefficients of three consecutive terms of (1+x)<sup>(n+5)</sup> are in the ratio 5:10:14.
-Then n = 
-
-				<br>
-				<br>
-				A. 6 <br>
-				B. 8 <br>
-				C. 5 <br>
-				D. 7 <br>
-
-			</div>
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 14</h4><br>
-                The maximum volume of a right circular cone having slant height 3m is
-
-				<br>
-				<br>
-				A. 3 𝜋√3 <br>
-				B. 2 𝜋√3 <br>
-				C. 3 𝜋 <br>
-				D. (4/3) 𝜋 <br>
- 
-			</div>
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 15</h4><br>
-                The sum of the coefficients of all the even powers of x in the expansion of (2x<sup>3</sup>– 3x +1)<sup>11</sup>
-
-				<br>
-				<br>
-				A. 2.6<sup>10</sup> <br>
-				B. 3.6<sup>10</sup> <br>
-				C. 6<sup>10</sup> <br>
-				D. 6<sup>11</sup> <br>
- 
-			</div>
-
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 16</h4><br>
-                Number of values of n for which,
-                <sup>22</sup>C<sub>n-2</sub> + 2.<sup>22</sup>C<sub>n-1</sub> + <sup>22</sup>C<sub>n</sub> ≥ <sup>24</sup>C<sub>18</sub>
-
-				<br>
-				<br>
-				A. 12  <br>
-				B. 13  <br>
-				C. 14  <br>
-				D. 15  <br>
-
-			</div>
-
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 17</h4><br>
-                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
-spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
-filled from these vessels to contain a mixture of spirit and water in the ratio of
-4:1. How many liters are taken from the first vessel?
-
-				<br>
-				<br>
-				A. 11 litres  <br>
-				B. 22 litres  <br>
-				C. 16.5 litres <br>
-				D. 17.5 litres <br>
-				
-			</div>
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 17</h4><br>
-                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
-spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
-filled from these vessels to contain a mixture of spirit and water in the ratio of
-4:1. How many liters are taken from the first vessel?
-
-				<br>
-				<br>
-				A. 11 litres  <br>
-				B. 22 litres  <br>
-				C. 16.5 litres <br>
-				D. 17.5 litres <br>
-				
-			</div>
-
-			<br><br>
-
-			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 18</h4><br>
                 The price of raw materials has gone up by 15%, labour cost has also increased
 from 25% of the cost of raw material to 30% of the cost of raw material. By
 how much percentage should there be a reduction in the usage of raw
@@ -409,7 +316,7 @@ materials to keep the cost same?
 			<br><br>
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 19</h4><br>
+                <h4>Question No. 14</h4><br>
                 A sold a table to B at a profit of 20%. B sold the same table to C for Rs.75
 thereby making a profit of 25%. Find the price at which A bought the table
 from X if it is known that X gained 25% in the transaction?
@@ -429,7 +336,7 @@ from X if it is known that X gained 25% in the transaction?
 			<br><br>
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 20</h4><br>
+                <h4>Question No. 15</h4><br>
                 A cone, a hemisphere and a cylinder stand on equal bases and have the same
 height. What is the ratio of their volumes?
 				<br>
@@ -443,8 +350,13 @@ height. What is the ratio of their volumes?
 
 			<br><br>
 
+
+			<h3><u>Mathematical Reasoning</u></h3>
+
+			<br>
+
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
-                <h4>Question No. 21</h4><br>
+                <h4>Question No. 16</h4><br>
                 How many numbers are there between 100 and 1000, which have exactly one
 of their digits are 8?
 				<br>
@@ -456,7 +368,103 @@ of their digits are 8?
 				
 			</div>
 
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 17</h4><br>
+                Krishna has exams for 12 subjects. Overall, to succeed he must pass in a
+greater number of subjects than the subjects he fails. In how many ways can
+he fail?
+				<br>
+				<br>
+				A. 1586 <br>
+				B. 1585 <br>
+				C. 2509 <br>
+				D. 2510 <br>
+
+			</div>
+
 			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 18</h4><br>
+                The locus of middle points of a system of parallel chords of a parabola y^2 =
+4ax, if m is the slope of parallel chords is,
+
+				<br>
+				<br>
+				A. y = m/2a <br>
+				B. y = 2m/a <br>
+				C. y = a/2m <br>
+				D. y = 2a/m <br>
+
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 19</h4><br>
+                .The coefficients of three consecutive terms of (1+x)<sup>(n+5)</sup> are in the ratio 5:10:14.
+Then n = 
+
+				<br>
+				<br>
+				A. 6 <br>
+				B. 8 <br>
+				C. 5 <br>
+				D. 7 <br>
+
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 20</h4><br>
+                The maximum volume of a right circular cone having slant height 3m is
+
+				<br>
+				<br>
+				A. 3 𝜋√3 <br>
+				B. 2 𝜋√3 <br>
+				C. 3 𝜋 <br>
+				D. (4/3) 𝜋 <br>
+ 
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 21</h4><br>
+                The sum of the coefficients of all the even powers of x in the expansion of (2x<sup>3</sup>– 3x +1)<sup>11</sup>
+
+				<br>
+				<br>
+				A. 2.6<sup>10</sup> <br>
+				B. 3.6<sup>10</sup> <br>
+				C. 6<sup>10</sup> <br>
+				D. 6<sup>11</sup> <br>
+ 
+			</div>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 21</h4><br>
+                Number of values of n for which,
+                <sup>22</sup>C<sub>n-2</sub> + 2.<sup>22</sup>C<sub>n-1</sub> + <sup>22</sup>C<sub>n</sub> ≥ <sup>24</sup>C<sub>18</sub>
+
+				<br>
+				<br>
+				A. 12  <br>
+				B. 13  <br>
+				C. 14  <br>
+				D. 15  <br>
+
+			</div>
+
+
+			<br><br>
+
+			
 
 			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 22</h4><br>
