--- a/views/motest.ejs
+++ b/views/motest.ejs
@@ -458,10 +458,10 @@ Then n =
 +y +z=10), (x<sup>2</sup>+ y<sup>2</sup>+ z<sup>2</sup>=62) and (x<sup>3</sup>+y<sup>3</sup>+z<sup>3</sup>=340). Find the value of (x<sup>4</sup>+y<sup>4</sup>+z<sup>4</sup>)?
 				<br>
 				<br>
-				A. 300  <br>
-				B. 1444 <br>
-				C. 225  <br>
-				D. 729  <br>
+				A. 1920  <br>
+				B. 1925 <br>
+				C. 1922  <br>
+				D. None of these  <br>
 				
 			</div>
 
