--- a/views/morules2.ejs
+++ b/views/morules2.ejs
@@ -164,7 +164,7 @@
 						var t = Date.now();
 						$.ajax({
 							type: "POST",
-							url: '/maths/notetime',
+							url: '/maths2/notetime',
 							data: {
 								time: t,
 								wissid: '<%=id%>'
