--- a/views/motest2.ejs
+++ b/views/motest2.ejs
@@ -391,7 +391,7 @@ curve and x-axis are 6 units apart. Find a + b.
 
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 5</h4><br>
-			Two non-negative integers a and b are chosen at random from the set of nonnegative integers. In terms of percentages, what is the probability of a2 + b2 being
+			Two non-negative integers a and b are chosen at random from the set of nonnegative integers. In terms of percentages, what is the probability of a<sup>2</sup> + b<sup>2</sup> being
 divisible by 10?<br><br>
 			<form id="q5" enctype="multipart/form-data">
 				<input id="sub5" type="file"  name="filee">
