--- a/views/guestlectures.ejs
+++ b/views/guestlectures.ejs
@@ -253,10 +253,92 @@ Mr.Radice has been on the executive leadership teams of two successful stock IPO
             data-aos="zoom-in-left" data-aos-easing="#example-easing"
             data-aos-duration="1000"
         
-        ><img src="./images/Radice Bio Photo.png" height="400" alt="V K Aatre"></div>
+        ><img src="./images/Radice Bio Photo.png" height="400" alt="Mike"></div>
     </div>
     </div>
 
+<br><br><br>
+    <div class="row">
+        <div class="col-lg-5 col-sm-12 d-flex justify-content-center"
+        
+            data-aos="zoom-in-right" data-aos-easing="#example-easing"
+            data-aos-duration="1000"
+
+        ><img src="./images/singh_avinash.jpg" height="400" style="max-width: 100%;" alt="Avinash"></div>
+        
+        <div class="col-lg-7 col-sm-12  ">
+            <div class="row">
+                
+                <div class="col-lg-8 col-sm-12"
+                    data-aos="zoom-in-down" data-aos-easing="#example-easing"
+                    data-aos-duration="1500"
+
+                >
+                <br>
+                <h2 class="rightcontent"> Avinash Singh </h2> </div>
+                <button data-aos="zoom-in" data-aos-easing="#example-easing" data-aos-duration="1500"
+                class="contact100-form-btn" style="width: auto; margin: auto;" onclick="popup('guest-talks-141420');">
+                    Register for Free
+                    <i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
+                </button>
+                <script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
+
+            </div>
+            <br>
+
+            <div class="col-lg-12 col-sm-12 d-flex justify-content-right"
+            
+            data-aos="fade-left"
+            data-aos-easing="#example-easing"
+            data-aos-duration="1500"
+            
+            ><p class="rightcontent">
+                Avinash K Singh is the founder of India Future Society and Longevity Alliance India. He is also working as Advisor, Researcher and Engineer for other organization and Institutes in India, USA  &  Europe. His research areas include the intersection of Brain-Computer Interfaces (BCIs), Physical Human-Robot Collaboration (pHRC), AR,VR, etc. 
+            </p>
+            </div>
+
+        </div>
+       
+    </div>
+<br><br><br>
+
+    <div class="row">
+        
+        <div class="col-lg-7 col-sm-12  ">
+            <div class="row">
+                <div class="col-lg col-sm-12"
+                data-aos="zoom-in-down" data-aos-easing="#example-easing"
+                data-aos-duration="1500"
+                
+                ><h2 class="text"> Santosh Hulawale </h2> </div>
+                <button data-aos="zoom-in" data-aos-easing="#example-easing" data-aos-duration="1500"
+                class="contact100-form-btn" style="width: auto; margin: auto;" onclick="popup('guest-talks-141420');">
+                    Register for Free
+                    <i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
+                </button>
+                <script src="https://www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
+            </div>
+            <br>
+            <div class="col-lg-12 col-sm-12 d-flex justify-content-right"
+            
+            data-aos="fade-right"
+            data-aos-easing="#example-easing"
+            data-aos-duration="1500"
+            
+            
+            ><p class="text">He is the founder and Managing director of INDRO ROBOTECH Pvt. Ltd. He created A.I Humanoids named INDRO, INDRO 2.0, INDRO 3.0, INDRO 4.0 and PRIME and designed 48 identical innovations in 19 years of R&D
+            </p>
+            </div>
+
+        </div>
+        <div class="col-lg-5 col-sm-12 d-flex justify-content-center    "
+            data-aos="zoom-in-left" data-aos-easing="#example-easing"
+            data-aos-duration="1000"
+        
+        ><img src="./images/santosh.jpeg" width="400" alt="Santosh"></div>
+    </div>
+    </div>
+<br><br>
 
     
   <!-- <script type="text/javascript" src="./javascripts/canvas.js"></script>   -->
