--- a/views/initiatives.ejs
+++ b/views/initiatives.ejs
@@ -12,6 +12,7 @@
     <link href="./stylesheets/navbar.css" rel="stylesheet">
     <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png"  href="./images/logo-mini.png" type="image/x-icon">
 
     <style>
         .main h1 {
@@ -61,7 +62,7 @@
 </head>
 
 <body>
-    <header style="height: 1vh !important;" class="hidden">
+    <header style="height: 1vh !important;">
 		<div id="navigation" class="">
 			<a class="menu-toggle">
 				<div class="btn-toggle">
@@ -135,7 +136,7 @@
 	  </div>
 	</header>
 
-    <div class="main">
+    <div class="main" style="margin-top: 200px;">
         <h1 style="color: burlywood;"><b>Initiatives By Wissenaire</b></h1>
         <ul class="cards">
             <li class="cards_item">
