--- a/views/exb.ejs
+++ b/views/exb.ejs
@@ -7,6 +7,8 @@
         <link href="./stylesheets/events.css" rel="stylesheet">
         <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
+
         <style>
            body{
                background-color:black ;
