--- a/views/exb.ejs
+++ b/views/exb.ejs
@@ -136,7 +136,7 @@
         </header>
 
         <div >
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-top: 50px;">
             <div class="row">
                 <div class="col-lg-8 col-sm-12 " >
                     <div class="main-heading">
