--- a/views/exb.ejs
+++ b/views/exb.ejs
@@ -163,7 +163,7 @@
                     </div>
                     <div class="row">
                         <br>
-                        <div class="col d-flex justify-content-center">
+                        <div class="col d-flex justify-content-center" style="margin-top: 40px;">
                             <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('virtual-space-exhibition-by-isro-444122');">
                                 Register
                                 <i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
