--- a/views/exb.ejs
+++ b/views/exb.ejs
@@ -2,9 +2,12 @@
     <head>
         <title>Exhibitons | Wissenaire'21</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" 
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" 
+        crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="./stylesheets/events.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
         <link href="./stylesheets/icofont/icofont.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
@@ -55,6 +58,28 @@
             }
             .main-heading{
                 margin-top: 25vh;;
+            }
+            .head1{
+                font-size: 50px;
+            }
+            @media  only screen and (max-width : 400px) {
+
+                .head1{
+                    font-size: 24px;
+                }
+                .dateline{
+                    font-size:16px;
+                }
+               
+            }
+            @media only screen and (min-width:600px){
+                .borderdiv{
+
+                    margin-top:4.6vw;
+                    border: 2px solid #08E4FC;
+                    border-bottom-left-radius: 50px; 
+
+                }
             }
         </style>
 
@@ -135,35 +160,35 @@
           </div>
         </header>
 
+
         <div >
-        <div class="container-fluid" style="margin-top: 50px;">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-8 col-sm-12 " >
                     <div class="main-heading">
                     <div class="row" >
                         <div class="col d-flex justify-content-center">
-                            <h1 style="font-size: 50px;">Virtual Space Exhibiton</h1>
+                            <h1 class="head1" >Virtual Space Exhibiton</h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col d-flex justify-content-center">
-                            <h1 style="font-size: 50px;">and talk on</h1>
+                            <h1 class="head1">and talk on</h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col d-flex justify-content-center">
-                        <h1 style="font-size: 50px;">Indian Space Programme</h1>
+                        <h1 class="head1">Indian Space Programme</h1>
                         </div>
                     </div>
                     <div class="underline1" ></div>
                     <div class="row">
                         <div class="col d-flex justify-content-center">
-                        <h2>Tuesday | April 6 | Time : 10:30 AM </h2>
+                        <h2 class = "dateline">Tuesday | April 6 | Time : 10:15 AM </h2>
                         </div>
                     </div>
-                    <div class="row">
-                        <br>
-                        <div class="col d-flex justify-content-center" style="margin-top: 40px;">
+                    <div class="row " style="margin-top: 20px;margin-bottom: 20px;">
+                        <div class="col d-flex justify-content-center">
                             <button class="contact100-form-btn" style="width: 40%; margin: auto;" onclick="popup('virtual-space-exhibition-by-isro-444122');">
                                 Register
                                 <i class="fa fa-long-arrow-alt-right" id="sl" style="margin-left: 10px;"></i>
@@ -175,29 +200,26 @@
                 </div>
                 
                 </div>
-                <div class="col-lg-4 col-sm-12" 
-                style=" margin-top:4.6vw;
-                        border: 2px solid #08E4FC;
-                        border-bottom-left-radius: 50px; ">
+                <div class="col-lg-4 col-sm-12 borderdiv" >
                     
                 <div class="row speaker-header-div ">
                     <h1 class="speaker-header ">Speakers</h1>
                 </div>
                 <div class="row speakers-div">
-                    <div class="col-lg-5 col-sm-12">
+                    <div class="col-lg-5 col-sm-6">
                         <img class="speakers" src="./images/nb.jpeg" width="160px" height="160px" alt="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12">
+                    <div class="col-lg-7 col-sm-6">
                         <div class="row"><h3>Sci. Naresh Bhatt</h3></div>
                         <div class="row underline"></div>
                         <div class="row"><h4>Head of VSSE</h4></div>
                     </div>
                 </div>
                 <div class="row speakers-div">
-                    <div class="col-lg-5 col-sm-12">
+                    <div class="col-lg-5 col-sm-6">
                         <img class="speakers" src="./images/rkv.jpeg" width="160px" height="160px" alt="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12">
+                    <div class="col-lg-7 col-sm-6">
                         <div class="row"><h3>Sci. Ravi Varma</h3></div>
                         <div class="row underline"></div>
                         <div class="row"><h4>Mechanical</h4></div>
@@ -205,10 +227,10 @@
                     </div>
                 </div>
                 <div class="row speakers-div">
-                    <div class="col-lg-5 col-sm-12">
+                    <div class="col-lg-5 col-sm-6">
                         <img class="speakers" src="./images/sr.jpeg" width="160px" height="160px" alt="" />
                     </div>
-                    <div class="col-lg-7 col-sm-12">
+                    <div class="col-lg-7 col-sm-6">
                         <div class="row"><h3>Sci. Satish Rao</h3></div>
                         <div class="row underline"></div>
                         <div class="row"><h4>Electronics</h4></div>
@@ -222,7 +244,6 @@
             </div>
         </div>
         </div>
-
         <script src="./javascripts/jquery.min.js"></script>
 
     </body>
