--- a/views/exb.ejs
+++ b/views/exb.ejs
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="./images/logo-mini.png" type="image/x-icon">
         <link href="./stylesheets/navbar.css" rel="stylesheet">
+        <link href="./stylesheets/events.css" rel="stylesheet">
         <style>
            body{
                background-color:black ;
@@ -162,7 +163,7 @@
 
 
         <div >
-        <div class="container-fluid">
+        <div class="container-fluid" style="margin-top: 50px;">
             <div class="row">
                 <div class="col-lg-8 col-sm-12 " >
                     <div class="main-heading">
